tutorials/observability/03-cluster-kubernetes-tracing/deployment/otel-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.102.0
          args:
            - "--config=/etc/otel/config.yaml"
          ports:
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
            - name: metrics
              containerPort: 8889
          volumeMounts:
            - name: config
              mountPath: /etc/otel
      volumes:
        - name: config
          configMap:
            name: otel-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: observability
spec:
  selector:
    app: otel-collector # must match pod labels
  ports:
    - name: otlp-http
      protocol: TCP
      port: 4318 # OTLP HTTP
      targetPort: 4318
    - name: otlp-grpc
      protocol: TCP
      port: 4317 # OTLP gRPC
      targetPort: 4317

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: otel-collector.softsys.com
      http:
        paths:
          - path: /v1/traces
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
